<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Школа</string>

    <!-- Startscreen -->
    <string name="server_teacher">СЕРВЕР \"УЧИТЕЛЬ\"</string>
    <string name="client_student">КЛИЕНТ \"УЧЕНИК\"</string>
    <string name="server_warning">Приложение будет работать в режиме СЕРВЕР \"УЧИТЕЛЬ\". Выбранный режим невозможно будет в дальнейшем изменить. Вы уверены?</string>
    <string name="client_warning">Приложение будет работать в режиме КЛИЕНТ \"УЧЕНИК\". Выбранный режим невозможно будет в дальнейшем изменить. Вы уверены?</string>

    <!-- Login data -->
    <string name="last_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="second_name">Отчество</string>
    <string name="subject">Предмет</string>
    <string name="group">Класс</string>
    <string name="enter_user_name">Введите имя пользователя</string>


    <!-- enter data error -->
    <string name="error_enter_last_name">Введите фамилию</string>
    <string name="error_enter_name">Введите имя</string>
    <string name="error_enter_second_name">Введите Отчество</string>
    <string name="error_enter_subject">Введите предмет</string>
    <string name="error_enter_group">Введите класс</string>

    <!-- menu -->
    <string name="refresh">Обновить</string>
    <string name="update_app">Обновить приложение</string>
    <string name="change_user_name">Изменить имя пользователя</string>
    <string name="about">О программе</string>

    <!-- student screen -->
    <string name="available_apps">Доступные приложения</string>
    <string-array name="status">
        <item>Разблокирован</item>
        <item>Заблокирован</item>
    </string-array>
    <string name="favourites">Избранное</string>
    <string name="server_list">Список серверов</string>
    <string name="error_incorrect_data">Проверьте правильность ввода данных</string>
    <string name="apps_activity_error">Планшет разблокирован, доступны все приложения</string>

    <!-- teacher screen -->
    <string name="to_block">Заблокировать</string>
    <string name="to_unblock">Разблокировать</string>
    <string name="to_delete">Удалить</string>
    <string name="other_teacher_lock">Заблокированно другим учителем</string>
    <string name="select_all">Выбрать всех</string>

    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>

    <string name="teacher_mode">Режим "УЧИТЕЛЬ"</string>

    <string-array name="default_white_list">
        <item>AZBUKA</item>
        <item>Classroom management</item>
        <item>Active Textbook Reader</item>
        <item>ActivEngage 2</item>
        <item>SPARKvue</item>
        <item>ЭлЖур</item>
        <item>ЕГЭ</item>
        <item>Nearprod</item>
        <item>ES Проводник</item>
        <item>Yandex</item>
        <item>Яндекс.Store</item>
        <item>Галерея</item>
        <item>Камера</item>
        <item>Школа</item>
    </string-array>

    <string-array name="default_black_list">
        <item>Настройки</item>
    </string-array>

    <string name="blocked">Заблокирован</string>
    <string name="unblocked">Разблокирован</string>
    <string name="error">Предупреждение</string>
    <string name="clients_connected">Нельзя изменить имя при подключенных клиентах</string>
    <string name="connected_to_server">Нельзя изменить имя при подключении к серверу</string>
    <string name="wait">Пожалуйста подождите</string>
</resources>
