<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:longClickable="false">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFF"
        android:layout_marginBottom="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/unblock_button"
            android:layout_width="@dimen/block_button_width"
            android:layout_height="@dimen/block_button_height"
            android:scaleType="fitCenter"
            android:src="@drawable/unlock_big"
            android:padding="13dp"
            style="@android:style/Widget.Holo.ImageButton"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_unblock"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <ImageButton
            android:id="@+id/block_button"
            android:layout_width="@dimen/block_button_width"
            android:layout_height="@dimen/block_button_height"
            android:src="@drawable/lock_big"
            android:scaleType="fitCenter"
            android:padding="13dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_block"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="@dimen/block_button_width"
            android:layout_height="@dimen/block_button_height"
            android:src="@drawable/delete_big"
            android:scaleType="fitCenter"
            android:padding="17dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_delete"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>